--- a/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
@@ -78,15 +78,10 @@
         </table>
         <input type="submit" class="btn btn-primary" value="{{ buttonLabel }}" />
     </div>
-</div>
-<div class="form-group">
-    <div class="col-md-offset-3">
-        
-    </div>
-</div>
 {{ form_end(matchForm) }}
+</div>
 
-<script type="text/javascript">
+<script>
     jQuery(function($) {
         $('#result_date_datepicker').datepicker({
             //altFormat  : "yy-mm-dd",
@@ -108,7 +103,7 @@
     });
 </script>
 #}
-<script type="text/javascript">
+<script>
     $(function() {
 
         $( init );
