[HTML valid] Player form view

--- a/src/foot5x5/MainBundle/Resources/views/player_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/player_form.html.twig
@@ -31,8 +31,7 @@
         <div class="col-sm-2">
             {{ form_errors(playerForm.valAtt) }}
             {{ form_widget(playerForm.valAtt, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
@@ -43,8 +42,7 @@
         <div class="col-sm-2">
             {{ form_errors(playerForm.valDef) }}
             {{ form_widget(playerForm.valDef, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
@@ -55,8 +53,7 @@
         <div class="col-sm-2">
             {{ form_errors(playerForm.valPhy) }}
             {{ form_widget(playerForm.valPhy, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
@@ -67,8 +64,7 @@
         <div class="col-sm-2">
             {{ form_errors(playerForm.cashBalance) }}
             {{ form_widget(playerForm.cashBalance, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
@@ -79,8 +75,7 @@
         <div class="col-sm-1">
             {{ form_errors(playerForm.isActive) }}
             {{ form_widget(playerForm.isActive, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
@@ -91,8 +86,7 @@
         <div class="col-sm-2">
             {{ form_errors(playerForm.user) }}
             {{ form_widget(playerForm.user, { 'attr':  {
-                'class': 'form-control',
-                'rows': '8'
+                'class': 'form-control'
             }}) }}
         </div>
     </div>
