--- a/src/foot5x5/MainBundle/Resources/views/transaction_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/transaction_form.html.twig
@@ -16,10 +16,8 @@
 <div id="finances-form" class="well">
 {{ form_start(trnForm, { 'attr': {'class': 'form-horizontal'} }) }}
     <div class="form-group">
-        {{ form_label(trnForm.date, null, { 'label_attr':  {
-            'class': 'col-md-5 control-label'
-        }}) }}
-        <div class="col-md-2 input-group date" id="datepicker">
+        <label class="col-sm-5 control-label">Date</label>
+        <div class="col-sm-3 input-group date" id="datepicker">
             {{ form_widget(trnForm.date, {attr: {
                 'class': 'form-control' },
             }) }}
@@ -32,9 +30,9 @@
     </div>
     <div class="form-group">
         {{ form_label(trnForm.giver, null, { 'label_attr':  {
-            'class': 'col-md-5 control-label'
+            'class': 'col-sm-5 control-label'
         }}) }}
-        <div class="col-md-3">
+        <div class="col-sm-3">
             {{ form_errors(trnForm.giver) }}
             {{ form_widget(trnForm.giver, { 'attr':  {
                 'class': 'form-control'
@@ -43,9 +41,9 @@
     </div>
     <div class="form-group">
         {{ form_label(trnForm.receiver, null, { 'label_attr':  {
-            'class': 'col-md-5 control-label'
+            'class': 'col-sm-5 control-label'
         }}) }}
-        <div class="col-md-3">
+        <div class="col-sm-3">
             {{ form_errors(trnForm.receiver) }}
             {{ form_widget(trnForm.receiver, { 'attr':  {
                 'class': 'form-control'
@@ -54,9 +52,9 @@
     </div>
     <div class="form-group">
         {{ form_label(trnForm.amount, null, { 'label_attr':  {
-            'class': 'col-md-5 control-label'
+            'class': 'col-sm-5 control-label'
         }}) }}
-        <div class="col-md-2">
+        <div class="col-sm-2">
             {{ form_errors(trnForm.amount) }}
             {{ form_widget(trnForm.amount, { 'attr':  {
                 'class': 'form-control'
@@ -64,13 +62,13 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-5 col-md-3">
+        <div class="col-sm-offset-5 col-sm-3">
             <input type="submit" class="btn btn-primary" value="{{ buttonLabel }}" />
         </div>
     </div>
 {{ form_end(trnForm) }}
 </div>
-<script type="text/javascript">
+<script>
     jQuery(function($) {
         $('#transaction_date_datepicker').datepicker({
             //altFormat  : "yy-mm-dd",
