--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -126,11 +126,11 @@
 			<h4>Foot 5x5 - © Etistav, 2018</h4>
 		</div>
 		<div class="col-xs-4">
+			<a href="#" class="fa fa-at"></a>
 			<a href="#" class="fa fa-facebook"></a>
 			<a href="#" class="fa fa-twitter"></a>
 			<a href="#" class="fa fa-instagram"></a>
 			<a href="#" class="fa fa-linkedin"></a>
-			<a href="#" class="fa fa-youtube"></a>
 		</div>
 	</div>
 </footer>
