--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -692,44 +692,28 @@ table#standing-table tbody tr td div.standing-player strong {
 	padding: 0;
 	padding-top: 20px;
 }
-#players-container ul#players-photos {
-	list-style-type: none;
-	margin: 0;
+#players-photos {
+	display: flex;
 	padding: 0;
-	text-align: center;
-	width: 100%;
+	flex-flow: row wrap;
+	justify-content: flex-start;
+	align-content: flex-start;
+}
+#players-photos .player-photo {
+	display: inline-block;
 }
 
-#players-container ul#players-photos li.player-photo {
-	border-color: #191950;
-	border: 2px solid #191950;
+#players-photos .profile-pic {
 	border-radius: 15px;
 	-webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    overflow:hidden;
-	display: inline-block;
-    margin-right: auto;
-	margin-bottom: 10px; 
-	padding: 0;
-	position: relative;
-	text-align: center;
-	height: 230px;
-	width: 200px;
+	-moz-border-radius: 15px;
+	margin: 0 2px 2px 0;
 }
-#players-container ul#players-photos li.player-photo:hover {
-	border-color: #4F5261;
-}
-#players-container ul#players-photos li.player-photo img {
-	border-bottom: 2px solid #191950;
-	width: 100%;
-}
-#players-container ul#players-photos li.player-photo p {
-    background: linear-gradient(to bottom, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-	background: -moz-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-    background: -o-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-    background: -webkit-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-	color: #191950;
+#players-photos .profile-pic p {
+	position: absolute;
+	top: 167px;
 	font-size: 1.2em;
+	font-weight: 700;
 	line-height: 30px;
 	margin: 0;
 	height: 30px;
@@ -737,32 +721,19 @@ table#standing-table tbody tr td div.standing-player strong {
 	text-align: center;
 	text-transform: uppercase;
 	vertical-align: middle;
+	transition: opacity 0.5s ease;
+	border-top: 1px solid #99CCFF;
 }
-#players-container ul#players-photos li.player-photo:hover img {
-	border-color: #4F5261;
+#players-photos .profile-pic:hover {
+	border-color: #99CCFF;
 }
-#players-container ul#players-photos li.player-photo:hover p {
-    background: linear-gradient(to bottom, rgb(43,43,136) 0%,rgb(25,25,80) 100%);
-	background: -moz-linear-gradient(top,  rgb(43,43,136) 0%, rgb(25,25,80) 100%);
-    background: -o-linear-gradient(top,  rgb(43,43,136) 0%,rgb(25,25,80) 100%);
-    background: -webkit-linear-gradient(top,  rgb(43,43,136) 0%,rgb(25,25,80) 100%);
-	color: #E0F0FF;
-}
-.players-logo {
-	background-color: #E0F0FF;
-	background-image: url("../logoFoot5x5_001.png");
-	background-size: 100% auto;
-	position: relative;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-	width: 40px;
-	height: 40px;
-	top: -230px;
-	left: 158px;
-	margin: 0;
+#players-photos .profile-pic:hover p {
+	opacity: 0;
 }
 
+/* ------------------------- */
+/*   POPUPS                  */
+/* ------------------------- */
 /* Outer */
 .popup {
     width:100%;
@@ -1409,6 +1380,12 @@ footer div h4 {
 		margin: 10px 10px 0 10px;
 	}
 
+	/* ----------------------- */
+	/*        PLAYERS          */
+	/* ----------------------- */
+	#players-photos {
+		justify-content: center;
+	}
 	
 	/* ----------------------- */
 	/*         POPUPS          */
